--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "duniter": "duniter/duniter#dev",
-    "duniter-keypair": "duniter/duniter-keypair#master",
+    "duniter-keypair": "0.1.1",
     "mocha": "3.2.0",
     "should": "11.1.2"
   }
