--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "inquirer": "3.0.6",
     "morgan": "1.8.1",
     "nnupnp": "1.0.2",
+    "node-pre-gyp": "^0.6.34",
     "q": "1.5.0",
     "underscore": "1.8.3",
     "ws": "1.1.1"
