--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "co": "4.6.0",
     "cors": "2.8.2",
     "ddos": "0.1.16",
+    "duniter-common": "^1.3.0",
     "errorhandler": "1.5.0",
     "event-stream": "3.3.4",
     "express": "4.15.2",
@@ -42,7 +43,8 @@
     "ws": "1.1.1"
   },
   "devDependencies": {
-    "duniter": "^1.2.0",
+    "duniter": "^1.2.4",
+    "duniter-keypair": "^1.3.0",
     "mocha": "3.2.0",
     "request": "2.81.0",
     "request-promise": "4.2.0",
