--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "request": "2.81.0",
     "request-promise": "4.2.0",
     "should": "11.1.2"
+  },
+  "peerDependencies": {
+    "duniter": "1.3.x"
   }
 }
